--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <h3>Calculator</h3>
-    <button id="1">1</button>
+    <button id="btn1">1</button>
 
     <script src="index.js"></script>
 </body>
