--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <h3>Calculator</h3>
     <button id="btn1">1</button>
+    <div id="screen"></div>
 
     <script src="index.js"></script>
 </body>
