--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     <h3>Calculator</h3>
     <button id="btn1">1</button>
     <div id="screen"></div>
+<script>
+const btn1 = document.getElementById("btn1");
+const screen = document.getElementById("screen");
 
-    <script src="index.js"></script>
+btn1.addEventListener("click", function() {
+  screen.textContent += "1";
+});
+</script>
+
+
 </body>
 </html>
