now will it work?

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <button id="btn1">1</button>
     <div id="screen"></div>
 
-<script> src="index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
